Fixed overflow in interests

--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -345,6 +345,7 @@ section
   width: 60vh
   margin: 0
   padding: 0
+  overflow: hidden
 
   li
     list-style-type: none
